--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1057,6 +1057,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test VGG16_predict_breed\n",
+    "predict1 = VGG16_preidct_breed(dog_files_short[0])\n",
+    "print(\"prediction test: \", predict1)\n",
+    "\n",
+    "#display img\n",
+    "test_dog = cv2.imread(dog_files_short[0])\n",
+    "test_dog = cv2.cvtColor(test_dog, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "plt.imshow(test_dog)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1094,7 +1112,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Obtain bottleneck features from another pre-trained CNN."
+    "### TODO: Obtain bottleneck features from another pre-trained CNN.\n",
+    "\n",
+    "# download features\n",
+    "# code adapted from DLND/deep_learning/transfer_learning\n",
+    "from urllib.request import urlretrieve\n",
+    "from os.path import isfile, isdir\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "vgg_dir = 'bottleneck_features/'\n",
+    "# Make sure dir exists\n",
+    "if not isdir(vgg_dir):\n",
+    "    raise Exception(\"directory doesn't exist!\")\n",
+    "\n",
+    "class DLProgress(tqdm):\n",
+    "    last_block = 0\n",
+    "\n",
+    "    def hook(self, block_num=1, block_size=1, total_size=None):\n",
+    "        self.total = total_size\n",
+    "        self.update((block_num - self.last_block) * block_size)\n",
+    "        self.last_block = block_num\n",
+    "\n",
+    "if not isfile(vgg_dir + \"DogVGG19Data.npz\"):\n",
+    "    with DLProgress(unit='B', unit_scale=True, miniters=1, desc='VGG19 Parameters') as pbar:\n",
+    "        urlretrieve(\n",
+    "            'https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/DogVGG19Data.npz',\n",
+    "            vgg_dir + 'DogVGG19Data.npz',\n",
+    "            pbar.hook)\n",
+    "else:\n",
+    "    print(\"Parameter file already exists!\")\n",
+    "\n",
+    "# load bottleneck features to local env\n",
+    "bottleneck_features = np.load('bottleneck_features/DogVGG19Data.npz')\n",
+    "train_VGG19 = bottleneck_features['train']\n",
+    "valid_VGG19 = bottleneck_features['valid']\n",
+    "test_VGG19 = bottleneck_features['test']"
    ]
   },
   {
@@ -1119,7 +1171,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Define your architecture."
+    "### TODO: Define your architecture.\n",
+    "\n",
+    "# VGG19 base\n",
+    "VGG19_model = Sequential()\n",
+    "\n",
+    "# do we need this line?\n",
+    "# VGG19_model = applications.VGG19(weights = \"imagenet\", include_top=False, input_shape = (img_width, img_height, 3))\n",
+    "\n",
+    "# do we need to freeze the lower layers?\n",
+    "\n",
+    "# top level classifier and output\n",
+    "# GAP layer\n",
+    "VGG19_model.add(GlobalAveragePooling2D(input_shape=train_VGG19.shape[1:]))\n",
+    "\n",
+    "# Three Dense (FC) layers with dropout\n",
+    "# Dense 1\n",
+    "VGG19_model.add(Dense(500, activation='relu'))\n",
+    "VGG19_model.add(Dropout(0.5))\n",
+    "# Dense 2\n",
+    "VGG19_model.add(Dense(200, activation='relu'))\n",
+    "VGG19_model.add(Dropout(0.5))\n",
+    "# Dense 3\n",
+    "# 133 labels to classify\n",
+    "VGG19_model.add(Dense(133, activation='softmax'))\n",
+    "\n",
+    "VGG19_model.summary()"
    ]
   },
   {
@@ -1135,7 +1212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Compile the model."
+    "### TODO: Compile the model.\n",
+    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
@@ -1155,7 +1233,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Train the model."
+    "### TODO: Train the model.\n",
+    "# use data set from Step 3\n",
+    "from keras.callbacks import ModelCheckpoint  \n",
+    "\n",
+    "epochs = 10\n",
+    "\n",
+    "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
+    "                               verbose=1, save_best_only=True)\n",
+    "\n",
+    "model.fit(train_tensors, train_targets, \n",
+    "          validation_data=(valid_tensors, valid_targets),\n",
+    "          epochs=epochs, batch_size=20, callbacks=[checkpointer], verbose=1)"
    ]
   },
   {
@@ -1171,7 +1260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Load the model weights with the best validation loss."
+    "### TODO: Load the model weights with the best validation loss.\n",
+    "model.load_weights('saved_models/weights.best.from_scratch.hdf5')"
    ]
   },
   {
@@ -1189,7 +1279,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Calculate classification accuracy on the test dataset."
+    "### TODO: Calculate classification accuracy on the test dataset.\n",
+    "# get index of predicted dog breed for each image in test set\n",
+    "dog_breed_predictions = [np.argmax(model.predict(np.expand_dims(tensor, axis=0))) for tensor in test_tensors]\n",
+    "\n",
+    "# report test accuracy\n",
+    "test_accuracy = 100*np.sum(np.array(dog_breed_predictions)==np.argmax(test_targets, axis=1))/len(dog_breed_predictions)\n",
+    "print('Test accuracy: %.4f%%' % test_accuracy)"
    ]
   },
   {
@@ -1219,7 +1315,17 @@
    "outputs": [],
    "source": [
     "### TODO: Write a function that takes a path to an image as input\n",
-    "### and returns the dog breed that is predicted by the model."
+    "### and returns the dog breed that is predicted by the model.\n",
+    "\n",
+    "from extract_bottleneck_features import *\n",
+    "\n",
+    "def VGG19_predict_breed(img_path):\n",
+    "    # extract bottleneck features\n",
+    "    bottleneck_feature = extract_VGG19(path_to_tensor(img_path))\n",
+    "    # obtain predicted vector\n",
+    "    predicted_vector = VGG19_model.predict(bottleneck_feature)\n",
+    "    # return dog breed that is predicted by the model\n",
+    "    return dog_names[np.argmax(predicted_vector)]"
    ]
   },
   {
@@ -1247,12 +1353,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "### TODO: Write your algorithm.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "def combo_detector(img_path):\n",
+    "    # initialize \n",
+    "    detected = [0,0]\n",
+    "\n",
+    "    # check human face\n",
+    "    if face_detector(img_path) == True:\n",
+    "        detected[0] = 1\n",
+    "\n",
+    "    # check dog face\n",
+    "    if dog_detector(img_path) == True:\n",
+    "        detected[1] = 1\n",
+    "\n",
+    "    if detected == [0,0]:\n",
+    "        raise Exception(\"Sorry! We had trouble reading the face.\")\n",
+    "\n",
+    "    if detected != [0,0]:        \n",
+    "        if detected == [1,0]:\n",
+    "            print(\"Hello, human!\")\n",
+    "        if detected == [0,1]:\n",
+    "            print(\"Hello, dog!\")\n",
+    "        if detected == [1,1]:\n",
+    "            print(\"What a beautiful face!\") # detects both human and dog\n",
+    "\n",
+    "        # call dog detector\n",
+    "        prediction = VGG19_predict_breed(img_path)\n",
+    "\n",
+    "        # display img\n",
+    "        disp_img = cv2.imread(img_path)\n",
+    "        disp_img = cv2.cvtColor(disp_img, cv2.COLOR_BGR2RGB)\n",
+    "        plt.imshow(disp_img)\n",
+    "        plt.show()\n",
+    "\n",
+    "        # print prediction\n",
+    "        print(\"You look like a \", prediction)\n",
+    "        return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Sorry! We had trouble reading the face.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-32ecfcb17556>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# test for exception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcombo_detector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-30f8f3b20031>\u001b[0m in \u001b[0;36mcombo_detector\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdetected\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sorry! We had trouble reading the face.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdetected\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: Sorry! We had trouble reading the face."
+     ]
+    }
+   ],
+   "source": [
+    "# test for exception\n",
+    "# this may cause failure of reading in an array of images\n",
+    "combo_detector(None)"
    ]
   },
   {
@@ -1282,7 +1448,132 @@
    "source": [
     "## TODO: Execute your algorithm from Step 6 on\n",
     "## at least 6 images on your computer.\n",
-    "## Feel free to use as many code cells as needed."
+    "## Feel free to use as many code cells as needed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for bad image: all random noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for dog image\n",
+    "combo_detector(dog_files_short[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for human image\n",
+    "combo_detector(human_files_short[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for double recog: human and dog; human face false positive\n",
+    "combo_detector(dog_face[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for double recog: human and dog; dog face false positive\n",
+    "combo_detector(human_dog[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for double recog: human and dog; dog face false positive\n",
+    "combo_detector(human_dog[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test for human image: human face false negative\n",
+    "# Baseball cap shadow on face; Lou Piniella; former Rays manager\n",
+    "combo_detector(not_human_face[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# don't have any dog false negatives yet (not in first hundred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise = np.random.normal(0,1,100)\n",
+    "noise_array = np.array.zeros_like(dog_files_short[0])\n",
+    "noise_array = noise_array + noise\n",
+    "# std output: can we see any numeric data?\n",
+    "noise_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# enhanced image : dog image + random noise salt+pepper\n",
+    "noise = np.random.normal(0,1,100)\n",
+    "img = dog_files_short[0]\n",
+    "\n",
+    "noise_array = np.array.zeros_like(dog_files_short[0])\n",
+    "noise_array = noise_array + noise\n",
+    "img = img + noise_array\n",
+    "\n",
+    "combo_detector(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# analysis"
    ]
   }
  ],
