--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -280,7 +280,7 @@
    "source": [
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
-    "__Answer:__\n",
+    "__Answer:__ Yes, it is reasonable to ask users to provide a clear view of a face. Attempting to detect a face with challenging presentation adds another problem to the data preparation, and we see an example of it above in cell [5]. The Haar cascade algorithm was a good implementation in this case. It handled the data in a brief ammount of time with a reasonably high (99%) accuracy in the first 100 sample images.\n",
     "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
@@ -941,7 +941,7 @@
     "   \n",
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
-    "__Answer:__ \n",
+    "__Answer:__ The architecture is based on a classifier model presented in the transfer learning lab exercises. We continue with VGG19 because of its similarity to VGG16 which we used earlier. The advantage of transfer learning here is to build on top of a reliable VGG19 model. We took the convolution output (shape 512) of the VGG19 model as input to a Global Average Pooling (GAP) layer. The GAP output was passed through three Dense hidden layers with ReLu activation (shape 512, 384, and 256, respectively). The shapes of the hidden layers were chosen to funnel the sizes from the GAP layer (512) to the output labels (133). ReLu activation was chosen to reduce the effects of diminishing gradients. There were two dropout layers (with drop probability 0.3) between those three hidden layers. The final Dense layer used Softmax activation and had size 133 corresponding to the number of labels of dog breeds.\n",
     "\n"
    ]
   },
@@ -952,26 +952,20 @@
    "outputs": [],
    "source": [
     "### TODO: Define your architecture.\n",
-    "\n",
     "# VGG19 base\n",
     "VGG19_model = Sequential()\n",
-    "\n",
     "# top level classifier and output\n",
     "# GAP layer\n",
     "VGG19_model.add(GlobalAveragePooling2D(input_shape=train_VGG19.shape[1:]))\n",
-    "\n",
     "# Three Dense (FC) layers with dropout\n",
     "# Dense 1\n",
-    "VGG19_model.add(Dense(1000, activation='relu'))\n",
+    "VGG19_model.add(Dense(512, activation='relu'))\n",
     "VGG19_model.add(Dropout(0.3))\n",
-    "\n",
     "# Dense 2\n",
-    "VGG19_model.add(Dense(500, activation='relu'))\n",
+    "VGG19_model.add(Dense(384, activation='relu'))\n",
     "VGG19_model.add(Dropout(0.3))\n",
     "# Dense 3\n",
-    "VGG19_model.add(Dense(200, activation='relu'))\n",
-    "VGG19_model.add(Dropout(0.1))\n",
-    "\n",
+    "VGG19_model.add(Dense(256, activation='relu'))\n",
     "# activation and output\n",
     "# 133 labels to classify\n",
     "VGG19_model.add(Dense(133, activation='softmax'))\n",
@@ -1019,7 +1013,7 @@
     "\n",
     "epochs = 30\n",
     "\n",
-    "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
+    "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.VGG19.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
     "model.fit(train_tensors, train_targets, \n",
@@ -1041,7 +1035,7 @@
    "outputs": [],
    "source": [
     "### TODO: Load the model weights with the best validation loss.\n",
-    "model.load_weights('saved_models/weights.best.from_scratch.hdf5')"
+    "model.load_weights('saved_models/weights.best.VGG19.hdf5')"
    ]
   },
   {
@@ -1182,11 +1176,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# test for exception\n",
-    "# this may cause failure of reading in an array of images\n",
-    "combo_detector(None)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1224,7 +1214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test for bad image: all random noise"
+    "# test for exception: null input\n",
+    "combo_detector(None)"
    ]
   },
   {
@@ -1254,7 +1245,7 @@
    "outputs": [],
    "source": [
     "# test for double recog: human and dog; human face false positive\n",
-    "combo_detector(dog_face[0])"
+    "combo_detector(dog_files_short[dog_face[0]])"
    ]
   },
   {
@@ -1264,7 +1255,7 @@
    "outputs": [],
    "source": [
     "# test for double recog: human and dog; dog face false positive\n",
-    "combo_detector(human_dog[0])"
+    "combo_detector(human_files_short[human_dog[0]])"
    ]
   },
   {
@@ -1274,7 +1265,7 @@
    "outputs": [],
    "source": [
     "# test for double recog: human and dog; dog face false positive\n",
-    "combo_detector(human_dog[1])"
+    "combo_detector(human_files_short[human_dog[1]])"
    ]
   },
   {
@@ -1284,30 +1275,7 @@
    "outputs": [],
    "source": [
     "# test for human image: human face false negative\n",
-    "# Baseball cap shadow on face; Lou Piniella; former Rays manager\n",
-    "combo_detector(not_human_face[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# don't have any dog false negatives yet (not in first hundred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise = np.random.normal(0,1,100)\n",
-    "noise_array = np.array.zeros_like(dog_files_short[0])\n",
-    "noise_array = noise_array + noise\n",
-    "# std output: can we see any numeric data?\n",
-    "noise_array"
+    "combo_detector(human_files_short[not_human_face[0]])"
    ]
   },
   {
@@ -1332,15 +1300,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# analysis"
+    "# test for exception: raw noise img\n",
+    "combo_detector(noise_array)"
    ]
   }
  ],
