--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -941,7 +941,11 @@
     "   \n",
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
-    "__Answer:__ The architecture is based on a classifier model presented in the transfer learning lab exercises. We continue with VGG19 because of its similarity to VGG16 which we used earlier. The advantage of transfer learning here is to build on top of a reliable VGG19 model. We took the convolution output (shape 512) of the VGG19 model as input to a Global Average Pooling (GAP) layer. The GAP output was passed through three Dense hidden layers with ReLu activation (shape 512, 384, and 256, respectively). The shapes of the hidden layers were chosen to funnel the sizes from the GAP layer (512) to the output labels (133). ReLu activation was chosen to reduce the effects of diminishing gradients. There were two dropout layers (with drop probability 0.3) between those three hidden layers. The final Dense layer used Softmax activation and had size 133 corresponding to the number of labels of dog breeds.\n",
+    "__Answer:__ The architecture is based on a classifier model presented in the transfer learning lab exercises. We continue with VGG19 because of its similarity to VGG16 which we used earlier. The advantage of transfer learning here is to build on top of a reliable VGG19 model.\n",
+    "\n",
+    "The architecture of the additional hidden layers were inspired by the upper layers of the LeNet architecture. There are three dense (fully connected) layers. Each uses ReLu activation and is followed by a Max Pooling layer.\n",
+    "\n",
+    "ReLu activation was chosen to reduce the effects of diminishing gradients. Dropout layers (with drop probability 0.3) were tested between the three hidden layers, but they yielded a drop in accuracy and were omitted. The final Dense layer used Softmax activation and had size 133 corresponding to the number of labels of dog breeds.\n",
     "\n"
    ]
   },
@@ -957,15 +961,16 @@
     "# top level classifier and output\n",
     "# GAP layer\n",
     "VGG19_model.add(GlobalAveragePooling2D(input_shape=train_VGG19.shape[1:]))\n",
-    "# Three Dense (FC) layers with dropout\n",
+    "# Three Dense (FC) layers \n",
     "# Dense 1\n",
     "VGG19_model.add(Dense(512, activation='relu'))\n",
-    "VGG19_model.add(Dropout(0.3))\n",
+    "model.add(MaxPooling2D(pool_size=2, strides=4))\n",
     "# Dense 2\n",
     "VGG19_model.add(Dense(384, activation='relu'))\n",
-    "VGG19_model.add(Dropout(0.3))\n",
+    "model.add(MaxPooling2D(pool_size=2, strides=4))\n",
     "# Dense 3\n",
     "VGG19_model.add(Dense(256, activation='relu'))\n",
+    "model.add(MaxPooling2D(pool_size=2, strides=4))\n",
     "# activation and output\n",
     "# 133 labels to classify\n",
     "VGG19_model.add(Dense(133, activation='softmax'))\n",
