--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -209,9 +209,9 @@
     "Ideally, we would like 100% of human images with a detected face and 0% of dog images with a detected face.  You will see that our algorithm falls short of this goal, but still gives acceptable performance.  We extract the file paths for the first 100 images from each of the datasets and store them in the numpy arrays `human_files_short` and `dog_files_short`.\n",
     "\n",
     "__Answer:__ \n",
-    "- 99.0% of human images detected human faces.\n",
+    "- 99.0% of human images were identified as human faces.\n",
     "\n",
-    "- 11.0% of dog images detected human faces.\n"
+    "- 11.0% of dog images were identified as human faces.\n"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
-    "__Answer:__ Yes, it is reasonable to ask users to provide a clear view of a face. Attempting to detect a face with challenging presentation adds another problem to the data preparation, and we see an example of it above in cell [5]. The Haar cascade algorithm was a good implementation in this case. It handled the data in a brief ammount of time with a reasonably high (99%) accuracy in the first 100 sample images.\n",
+    "__Answer:__ Yes, it is reasonable to ask users to provide a clear view of a face. Attempting to detect a face with challenging presentation adds another problem to the data preparation. We see an example above where the algorithm failes to detect a human face in an image. The Haar cascade algorithm was a good implementation in this case. It handled the data in a brief ammount of time with a reasonably high (99%) accuracy in the first 100 sample images.\n",
     "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
@@ -431,9 +431,9 @@
     "- What percentage of the images in `dog_files_short` have a detected dog?\n",
     "\n",
     "__Answer:__ \n",
-    "- 2% of the images in `human_files_short` detected a dog.\n",
+    "- 2% of the images in `human_files_short` were identified as a dog.\n",
     "\n",
-    "- 100% of the images in `dog_files_short` detected a dog."
+    "- 100% of the images in `dog_files_short` were identified as a dog."
    ]
   },
   {
@@ -955,24 +955,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(train_VGG19.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### TODO: Define your architecture.\n",
     "# VGG19 base\n",
     "VGG19_model = Sequential()\n",
-    "# top level classifier and output\n",
-    "# GAP layer\n",
-    "VGG19_model.add(GlobalAveragePooling2D(input_shape=train_VGG19.shape[1:]))\n",
     "# Three Dense (FC) layers \n",
     "# Dense 1\n",
-    "VGG19_model.add(Dense(512, activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=2, strides=4))\n",
+    "VGG19_model.add(GlobalAveragePooling2D(input_shape=train_VGG19.shape[1:]))\n",
+    "VGG19_model.add(Dense(500, activation='relu'))\n",
+    "#VGG19_model.add(MaxPooling2D(pool_size=2, strides=4))\n",
     "# Dense 2\n",
-    "VGG19_model.add(Dense(384, activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=2, strides=4))\n",
+    "VGG19_model.add(Dense(300, activation='relu'))\n",
+    "#VGG19_model.add(MaxPooling2D(pool_size=2, strides=4))\n",
     "# Dense 3\n",
-    "VGG19_model.add(Dense(256, activation='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=2, strides=4))\n",
+    "VGG19_model.add(Dense(200, activation='relu'))\n",
     "# activation and output\n",
     "# 133 labels to classify\n",
+    "\n",
+    "#VGG19_model.add(GlobalAveragePooling2D())\n",
     "VGG19_model.add(Dense(133, activation='softmax'))\n",
     "\n",
     "VGG19_model.summary()"
@@ -992,7 +1000,7 @@
    "outputs": [],
    "source": [
     "### TODO: Compile the model.\n",
-    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
+    "VGG19_model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
@@ -1021,8 +1029,8 @@
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.VGG19.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
-    "model.fit(train_tensors, train_targets, \n",
-    "          validation_data=(valid_tensors, valid_targets),\n",
+    "VGG19_model.fit(train_VGG19, train_targets, \n",
+    "          validation_data=(valid_VGG19, valid_targets),\n",
     "          epochs=epochs, batch_size=20, callbacks=[checkpointer], verbose=1)"
    ]
   },
@@ -1040,7 +1048,7 @@
    "outputs": [],
    "source": [
     "### TODO: Load the model weights with the best validation loss.\n",
-    "model.load_weights('saved_models/weights.best.VGG19.hdf5')"
+    "VGG19_model.load_weights('saved_models/weights.best.VGG19.hdf5')"
    ]
   },
   {
@@ -1060,11 +1068,11 @@
    "source": [
     "### TODO: Calculate classification accuracy on the test dataset.\n",
     "# get index of predicted dog breed for each image in test set\n",
-    "dog_breed_predictions = [np.argmax(model.predict(np.expand_dims(tensor, axis=0))) for tensor in test_tensors]\n",
+    "VGG19_predictions = [np.argmax(VGG19_model.predict(np.expand_dims(tensor, axis=0))) for tensor in test_tensors]\n",
     "\n",
     "# report test accuracy\n",
-    "test_accuracy = 100*np.sum(np.array(dog_breed_predictions)==np.argmax(test_targets, axis=1))/len(dog_breed_predictions)\n",
-    "print('Test accuracy: %.4f%%' % test_accuracy)"
+    "VGG19_test_accuracy = 100*np.sum(np.array(VGG19_predictions)==np.argmax(test_targets, axis=1))/len(VGG19_predictions)\n",
+    "print('Test accuracy: %.4f%%' % VGG19_test_accuracy)"
    ]
   },
   {
@@ -1199,7 +1207,12 @@
     "\n",
     "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
     "\n",
-    "__Answer:__ "
+    "__Answer:__ The algorithm performed reasonably well. Training accuracy reached 95%. Test accuracy of 67% was close to validation accuracy of 70%\n",
+    "\n",
+    "Three points to improve:\n",
+    "* Augment the data set with perturbed images.\n",
+    "* Increase the number of training epochs.\n",
+    "* Try a different feature (such as Inception) for transfer learning."
    ]
   },
   {
